# hokora

./: .gitignore  Dockerfile.full  README.md  SECURITY.md  SETUP.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
configs/: hokora.toml.example
docs/runbooks/: 00-overview.md  01-installation.md  02-configuration.md  03-cli-reference.md  04-transport-setup.md  05-federation.md  06-sealed-channels.md  07-deployment-docker.md  08-deployment-systemd.md  09-monitoring-observability.md  10-database-operations.md  11-incident-response.md  12-upgrade-guide.md  13-permissions-and-roles.md  14-member-management.md
examples/two-node-federation/: README.md  docker-compose.yml
src/hokora/: __init__.py  __main__.py  config.py  constants.py  exceptions.py
src/hokora/cli/: _helpers.py  audit.py  ban.py  channel.py  config_cmd.py  daemon_cmd.py  db.py  identity.py  init.py  invite.py  main.py  mirror.py  node.py  role.py  seed.py
src/hokora/core/: announce.py  channel.py  daemon.py  heartbeat.py  identity.py  logging_config.py  lxmf_ingestor.py  maintenance_scheduler.py  message.py  mirror_manager.py  observability.py  pid_file.py  prometheus_exporter.py  sealed_bootstrap.py  sequencer.py  service_registry.py
src/hokora/db/: engine.py  fts.py  maintenance.py  models.py  queries.py
src/hokora/federation/: auth.py  channel_rotation_auth.py  epoch_crypto.py  epoch_manager.py  epoch_orchestrator.py  epoch_wire.py  handshake_orchestrator.py  key_rotation.py  mirror.py  mirror_ingestor.py  peering.py  pusher.py
src/hokora/media/: storage.py  thumbnail.py  transfer.py
src/hokora/protocol/: link_manager.py  live.py  lxmf_bridge.py  rns_bridge.py  session.py  sync.py  sync_utils.py  wire.py  zombie_link_buffer.py
src/hokora/security/: __init__.py  ban.py  db_key.py  fs.py  invite_codes.py  invites.py  log_sanitizer.py  lxmf_inbound.py  permissions.py  ratelimit.py  rns_config.py  roles.py  sealed.py  sealed_invariant.py  verification.py
src/hokora_tui/: __init__.py  __main__.py  announcer.py  app.py  keybindings.py  navigation.py  palette.py  state.py  sync_engine.py
src/hokora_tui/cli/: __init__.py  keyfile.py
systemd/: hokorad.service.template  lxmd.service.template  rnsd.service.template
tests/: _factories.py  conftest.py
tests/fixtures/: schema_v0_1_0.sql
tests/integration/: test_docker_entrypoint_first_boot.py  test_key_rotation_e2e.py  test_lxmf_bridge_sig_reconstruction.py  test_lxmf_bridge_source_unknown.py  test_lxmf_ingestion.py  test_permission_enforcement.py  test_sig_verify_roundtrip.py  test_sqlcipher_runtime.py  test_squash_schema_equivalence.py  test_sync_protocol.py
tests/live/: setup_two_nodes.sh
tests/load/: conftest.py  test_concurrent.py  test_federation_load.py  test_link_storm.py  test_rate_limiter_caps.py  test_volume.py  test_zombie_link_buffer_caps.py
tests/multinode/: conftest.py  test_cold_start_mirror.py  test_lxmf_inbound_path_resolution.py  test_runtime_seed_add.py  test_two_node_sync.py
tests/unit/: test_alembic_check.py  test_announce.py  test_announce_stagger.py  test_announcer_hops.py  test_announcer_lifecycle.py  test_appstate_setting_chokepoints.py  test_audit_remediation.py  test_audit_remediation2.py  test_ban_chokepoint.py  test_ban_manager.py  test_bookmarks.py  test_bug_fixes.py  test_cdsp_client.py  test_cdsp_deferred.py  test_cdsp_live.py  test_cdsp_session.py  test_cdsp_sync_profiles.py  test_channel_link_manager.py  test_channel_mirror.py  test_channel_rotation_auth.py  test_cli.py  test_cli_daemon_cmd.py  test_cli_help.py  test_cli_helpers.py  test_cli_identity.py  test_cli_node.py  test_cli_seed.py  test_cli_validation.py  test_client_db.py  test_client_db_cache.py  test_client_db_encrypted.py  test_client_db_key.py  test_client_db_migration.py  test_client_db_sealed_keys.py  test_client_db_stores.py  test_command_router.py  test_config.py  test_constants_gaps.py  test_core_managers.py  test_daemon_lifecycle.py  (+103 more)
(+98 files in other folders)
